Prevent screen overflow
After each calculation, before updating the screen, the result will be shaped by the shapeResult function

--- a/style.css
+++ b/style.css
@@ -44,16 +44,25 @@ button {
 
 #ac{
     width: 202px;
-    background-color: rgb(230, 46, 46);
+    /*background-color: rgb(230, 46, 46);*/
+    background-color: #EA4335;
     color: white;
 }
 
 #equal {
     width: 202px;
-    background-color: rgb(0, 162, 255);
+    /*background-color: rgb(0, 162, 255);*/
+    background-color: #4285F4;
     color: white;
 }
 
 .operator {
-    background-color: orange;
+    /*background-color: orange;*/
+    background-color: #FBBC05;
+}
+
+button:hover {
+    border-width: 2px;
+    font-weight: bold;
+    font-size: 34px;
 }
